Ability to update files with whitspaces e.g: ww.google.com/Your Jar.jar